--- a/anclas.html
+++ b/anclas.html
@@ -3,6 +3,7 @@
 		<title>Anclas</title>
 	</head>
 	<body>
+		arriba del menu
 		<a name="menu"></a>
 		Men&uacute; <br>
 		<ul>
@@ -22,6 +23,7 @@
 		<a name="p01"></a>
 		<p>Now that there is the Tec-9, a crappy spray gun from South Miami. This gun is advertised as the most popular gun in American crime. Do you believe that shit? It actually says that in the little book that comes with it: the most popular gun in American crime. Like they're actually proud of that shit.  </p>
 		<li>
+			Despues de cada parrafo
 			<a href="#menu">Regresar al men&uacute;</a>
 		</li>
 		<a name="p02"></a>
