--- a/ejemplo2.html
+++ b/ejemplo2.html
@@ -47,6 +47,19 @@
 		<a href="http://itculiacan.edu.mx" target="_blank">
 			Texto del enlace
 		</a>
+		<br>
+		Tablas: <br>
+		<table border>
+			<tr>
+				<th>Columna 1</th>
+				<th>Columna 2</th>
+				<th>Columna 3</th>
+			</tr>
+			<tr>
+				<td>Columna 1 Renglon 1</td>
+				<td rowspan= "2">Columna 2 Renglon 2</td>
+			</tr>
+		</table>
 
 	</body>
 </html>
