--- a/ejemplo2.html
+++ b/ejemplo2.html
@@ -53,11 +53,12 @@
 			<tr>
 				<th>Columna 1</th>
 				<th>Columna 2</th>
+				<!--<th rowspan="2">Columna 3</th>-->
 				<th>Columna 3</th>
 			</tr>
 			<tr>
 				<td>Columna 1 Renglon 1</td>
-				<td rowspan= "2">Columna 2 Renglon 2</td>
+				<td colspan="2">Columna 2 Renglon 2</td>
 			</tr>
 		</table>
 
